feat(auth): refactor permission model and authorization to support...
...multiple resources per permission (all or anyof matching)