@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2020 B2i Healthcare Pte Ltd, http://b2i.sg
+ * Copyright 2011-2021 B2i Healthcare Pte Ltd, http://b2i.sg
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,8 +19,7 @@ import java.io.Serializable;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Objects;
-
-import com.google.common.collect.ImmutableSet;
+import java.util.Set;
 
 
 /**
@@ -29,7 +28,7 @@ import com.google.common.collect.ImmutableSet;
 public final class Role implements Serializable {
 	
 	public static final Role UNSPECIFIED = new Role("Unspecified", Collections.emptySet());
-	public static final Role ADMINISTRATOR = new Role("Administrator", ImmutableSet.of(Permission.toAll(Permission.OPERATION_ALL)));
+	public static final Role ADMINISTRATOR = new Role("Administrator", Set.of(Permission.requireAll(Permission.ALL)));
 	
 	private static final long serialVersionUID = 1601508745318826995L;
 
